--- a/scss/components/__projects.scss
+++ b/scss/components/__projects.scss
@@ -85,9 +85,7 @@
 }
 
 @media screen and (min-width: 920px) {
-    .projects-header {
-        padding-bottom: 20px;
-    }
+
     .projects-div {
         padding-bottom: 70px;
     }
@@ -98,9 +96,5 @@
 
     .projects {
         padding: 150px 100px;
-    }
-
-    .project-1 {
-        margin: 0px;
     }
 }
